Fix misaligned column with header

--- a/src/scss/component/style.scss
+++ b/src/scss/component/style.scss
@@ -430,3 +430,6 @@
 .align-right{text-align: right !important;}
 .ledgercode__item-input input, .ledgercode__form-group input{padding: 1px 3px;height: 24px;}
 .ledgercode__form-group{max-width: 150px;float:right;}
+.ant-table-header{
+    width: 100%;
+}
